--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,41 +1,56 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  background-color: #363636;
+  font-family: 'Baloo 2';
+}
+
+.Menu {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.menuTitle {
+  color: #E3E3E3;
+  font-size: 64px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menuSubTitle {
+  color: #E3E300;
+  font-size: 24px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.buttons {
+  width:50%;
+  margin:auto;
+  font-family:inherit;
+  border-radius: 15px;
+  font-size: 24px;
 }
 
-.card {
-  padding: 2em;
+.gameCodeTextBoxDiv {
+  padding-top: 50px;
 }
 
-.read-the-docs {
-  color: #888;
+.gameCodeTextBox {
+  width:48.5%;
+  margin:auto;
+  font-family:inherit;
+  text-align: center;
+  border-radius: 15px;
+  font-size: 24px;
+}
+
+.joinButton {
+  background-color: #E95A5A;
+}
+
+.createButtonDiv {
+  padding-top: 50px;
+}
+
+.footerMessage {
+  color: #E3E3E3;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0px;
 }
