--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,7 @@ body {
   font-family:inherit;
   border-radius: 15px;
   font-size: 24px;
+  color: #363636;
 }
 
 .gameCodeTextBoxDiv {
@@ -90,6 +91,7 @@ body {
   color: #E3E3E3;
   font-size: 45px;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .messageBox {
@@ -113,21 +115,20 @@ body {
   font-size: 20px;
   text-align: center;
   background-color: #D9D9D9;
+  border: none;
 }
 
 .submitIdea {
   font-size: 30px;
-  border-radius: 50%;
+  border-radius: 50px;
+  border: none;
+  margin-left: 7px;
 }
 
 .tiles {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  column-gap: 20px;
-
-  color: #E95A5A;
-
+  display: flex; /*added*/
+  flex-direction: column; /*added*/
+  margin-bottom:70px;
 }
 
 .tile {
