create a new component for idea tiles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,3 +151,19 @@ body {
 .hasVoted {
   background-color: #E3E300;
 }
+
+/* IdeaTile */
+
+.ideaTile {
+  display:flex; 
+  flex-direction:row-reverse;
+  color: red;
+}
+
+.idea {
+
+}
+
+.vote {
+
+}
