--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,28 +94,35 @@ body {
   margin-bottom: 0;
 }
 
+.empty {
+  width:1000px;
+  background-color: white;
+}
+
 .messageBox {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  flex: 1;
 
   position: fixed;
   bottom: 0;
-  left: 0px;
+  left: 0;
   width: 100%;
 
-  padding:10px;
-  margin:0;
+  padding:12px;
+  /* margin:20; */
   background-color: #E95A5A;
 }
 
 .ideaTextBox{
+  flex-grow: 1;
   border-radius: 20px;
-  width: 80%;
   font-family:inherit;
   font-size: 20px;
   text-align: center;
   background-color: #D9D9D9;
-  border: none;
+  border: none; 
 }
 
 .submitIdea {
@@ -123,6 +130,7 @@ body {
   border-radius: 50px;
   border: none;
   margin-left: 7px;
+  margin-right: 20px;
 }
 
 .tiles {
